# atmospheric-neural-rendering

./: .gitignore  LICENSE.txt  README.md  env.yml  pyproject.toml
configs/: instant_ngp.json  nerf.json
scripts/: extract.py  make_video.py  train.py
src/atmonr/: batch_loader.py  encoders.py  geometry.py  graphics_utils.py  losses.py  progress_tracker.py  render.py  samplers.py  trainer.py  utils.py
src/atmonr/datasets/: factory.py  harp2.py  harp2_extract.py
src/atmonr/geospatial/: spherical.py  wgs_84.py
src/atmonr/models/: nerf.py
src/atmonr/pipelines/: factory.py  instant_ngp.py  nerf.py  pipeline.py
tests/: test_samplers.py
